<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/moveButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/movebutton70x70"
        android:contentDescription="@string/move"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/rotateLeftButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/leftbutton70x70"
        android:contentDescription="@string/left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/rotateRightButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rightbutton70x70"
        android:contentDescription="@string/right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/rotateLeftButton" />

    <ImageButton
        android:id="@+id/shotButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="-85dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shotbutton70x70"
        android:contentDescription="@string/shoot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/moveButton" />

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/pausebutton50x50"
        android:contentDescription="@string/pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/gameContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/pauseOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000" /> <!-- Semi-transparent black -->

        <LinearLayout
            android:id="@+id/pauseMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/continueButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/continuebutton200x50"
                android:contentDescription="@string/continue2"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/retryButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/retrybutton200x50"
                android:contentDescription="@string/retry" />

            <ImageButton
                android:id="@+id/menuButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/menubutton200x50"
                android:contentDescription="@string/menu" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gameOverMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/gameOverHeader"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:background="@drawable/gameoverheader300x80"
                android:contentDescription="@string/gameover"
                app:layout_constraintVertical_bias="0.15"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/playAgainButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/playagainbutton200x50"
                android:contentDescription="@string/playagain"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/menu2Button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/menubutton200x50"
                android:contentDescription="@string/menu2" />
        </LinearLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

